--- a/.github/workflows/deploy-node.yml
+++ b/.github/workflows/deploy-node.yml
@@ -1,26 +1,39 @@
-name: Deploy Node.js Demo
+name: Deploy Node.js DEMO
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Deploy to EC2
+      - name: Deploy to AWS Server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            echo "🚀 Starting API deployment..."
+            
             cd /var/www/html/node-demo
+            
+            # Pull latest changes
             git pull origin main
-            npm install
-            pm2 restart demo-app
+            
+            # Install dependencies
+            npm install --production
+            
+            # Create logs directory if needed
+            mkdir -p logs
+            
+            # Restart API with PM2
+            pm2 restart demo-app || pm2 start ecosystem.config.js
+            
+            # Save PM2 configuration
+            pm2 save
