--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express": "^4.21.2",
         "helmet": "^8.1.0",
         "morgan": "^1.10.0",
+        "mysql2": "^3.14.2",
         "path-to-regexp": "^6.2.1"
     },
     "devDependencies": {
